--- a/views/product-detail.pug
+++ b/views/product-detail.pug
@@ -3,6 +3,9 @@ extends layout
 block content
     p 
         a(href='/products/product-edit/'+product.id) Edit Product
+        br
+        
+        a(href='/products/product-delete/'+product.id) Delete Product
     h1= product.name
     p $ #{product.price}
     p size: #{product.size}
